# sea-llm

./: README.md  build_and_test_sea_llm.sh  chat_with_sea_llm.js
client/: client.py  inference.py  model.py  prepare_llm.py  quantize.py  train.py  train_llm.py  upload.py
client/tests/: requirements.txt  test_client_e2e.py
contract/: Anchor.toml  package.json  pnpm-lock.yaml
contract/programs/sea-nn/: Cargo.toml  lib.py
contract/programs/sea-nn/src/: lib.rs
contract/programs_py/: sea_nn.py
contract/tests/: close_accounts.ts  conv_60k_u16.json  dense_60k_u16.json  html.html  sea_nn.ts
data/: sample.txt  train.txt
examples/: sea_llm_chat.py
models/sea_nn_model/: model_registry.json  weights.json
models/test_model/: best_model.pt  checkpoint_epoch_1.pt  checkpoint_epoch_10.pt  checkpoint_epoch_2.pt  checkpoint_epoch_3.pt  checkpoint_epoch_4.pt  checkpoint_epoch_5.pt  checkpoint_epoch_6.pt  checkpoint_epoch_7.pt  checkpoint_epoch_8.pt  checkpoint_epoch_9.pt  model.npy  model.pt  model_config.json  model_weights.npy  model_weights.pkl
models/test_model_quantized/: model.npy  model.pt  model_registry.json  weights.json
site/: config-overrides.js  package.json  pnpm-lock.yaml
site/models/test_model_quantized/: dense_60k_u16.json  model_config.json
site/public/: index.html
site/scripts/: train.py
site/src/: App.tsx  index.tsx  samples.ts  sea_nn.json  sea_nn.ts  text.ts
site/src/components/: WalletProvider.tsx
site/src/styles/: tailwind.css
src/core/: seahorse_ast.rs  to_rust_source.rs
src/core/to_seahorse_ast/: from_python_ast.rs  (+1 more)
